--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <!-- Slider Section -->
         <section id="slider">
             <div class="container">
-                <img src="/assets/images/home bicycle.avif" id="slider1" class="slider active">
-                <img src="/assets/images/new bike2.avif" id="slider2" class="slider">
-                <img src="/assets/images/new bike4.avif" id="slider3" class="slider">
+                <img src="assets/images/home bicycle.avif" id="slider1" class="slider active">
+                <img src="assets/images/new bike2.avif" id="slider2" class="slider">
+                <img src="assets/images/new bike4.avif" id="slider3" class="slider">
 
                 <div class="controls">
                     <button class="prev" id="prev_btn"><i class="fas fa-chevron-left"></i> Prev</button>
@@ -104,7 +104,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, tempore.</p>
                 <div class="cards">
                     <div class="card">
-                        <img src="/assets/images/new bike5.jpg" alt="">
+                        <img src="assets/images/new bike5.jpg" alt="">
                         <div class="content">
                             <h4>Kryo X26 MTB - Model K</h4>
                             <div class="rating">
@@ -128,7 +128,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="/assets/images/new bike3.jpg" alt="">
+                        <img src="assets/images/new bike3.jpg" alt="">
                         <div class="content">
                             <h4>Kryo X26 MTB - Model X</h4>
                             <div class="rating">
@@ -152,7 +152,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="/assets/images/bike9.jpg" alt="">
+                        <img src="assets/images/bike9.jpg" alt="">
                         <div class="content">
                             <h4>Kryo X26 MTB - Model Y</h4>
                             <div class="rating">
@@ -176,7 +176,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="/assets/images/new bike1.jpg" alt="">
+                        <img src="assets/images/new bike1.jpg" alt="">
                         <div class="content">
                             <h4>Kryo X26 MTB - Model Z</h4>
                             <div class="rating">
