--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 </div>
                 <div class="cards">
                     <div class="card pcard helmet">
-                        <img src="/assets/images/helmet1.jpg" alt="">
+                        <img src="assets/images/helmet1.jpg" alt="">
                         <div class="content">
                             <h4>Helmet</h4>
                             <div class="rating">
@@ -379,7 +379,7 @@
                     </div>
 
                     <div class="card pcard gloves">
-                        <img src="/assets/images/gloves1.jpg" alt="">
+                        <img src="assets/images/gloves1.jpg" alt="">
                         <div class="content">
                             <h4>Gloves</h4>
                             <div class="rating">
@@ -400,7 +400,7 @@
                     </div>
 
                     <div class="card pcard light">
-                        <img src="/assets/images/light1.webp" alt="">
+                        <img src="assets/images/light1.webp" alt="">
                         <div class="content">
                             <h4>Bike Lights</h4>
                             <div class="rating">
@@ -421,7 +421,7 @@
                     </div>
 
                     <div class="card pcard helmet">
-                        <img src="/assets/images/helmet2.jpg" alt="">
+                        <img src="assets/images/helmet2.jpg" alt="">
                         <div class="content">
                             <h4>Helmet</h4>
                             <div class="rating">
@@ -442,7 +442,7 @@
                     </div>
 
                     <div class="card pcard light">
-                        <img src="/assets/images/light2.webp" alt="">
+                        <img src="assets/images/light2.webp" alt="">
                         <div class="content">
                             <h4>Bike Lights</h4>
                             <div class="rating">
@@ -463,7 +463,7 @@
                     </div>
 
                     <div class="card pcard gloves">
-                        <img src="/assets/images/gloves2.jpg" alt="">
+                        <img src="assets/images/gloves2.jpg" alt="">
                         <div class="content">
                             <h4>Gloves</h4>
                             <div class="rating">
@@ -485,7 +485,7 @@
                     </div>
 
                     <div class="card pcard light">
-                        <img src="/assets/images/light3.jpg" alt="">
+                        <img src="assets/images/light3.jpg" alt="">
                         <div class="content">
                             <h4>Bike Lights</h4>
                             <div class="rating">
@@ -506,7 +506,7 @@
                     </div>
 
                     <div class="card pcard helmet">
-                        <img src="/assets/images/helmet3.jpg" alt="">
+                        <img src="assets/images/helmet3.jpg" alt="">
                         <div class="content">
                             <h4>Helmet</h4>
                             <div class="rating">
@@ -527,7 +527,7 @@
                     </div>
 
                     <div class="card pcard gloves">
-                        <img src="/assets/images/gloves3.jpg" alt="">
+                        <img src="assets/images/gloves3.jpg" alt="">
                         <div class="content">
                             <h4>Gloves</h4>
                             <div class="rating">
@@ -548,7 +548,7 @@
                     </div>
 
                     <div class="card pcard helmet">
-                        <img src="/assets/images/helmet4.webp" alt="">
+                        <img src="assets/images/helmet4.webp" alt="">
                         <div class="content">
                             <h4>Helmet</h4>
                             <div class="rating">
@@ -570,7 +570,7 @@
                     </div>
 
                     <div class="card pcard light">
-                        <img src="/assets/images/light4.jpg" alt="">
+                        <img src="assets/images/light4.jpg" alt="">
                         <div class="content">
                             <h4>Bike Lights</h4>
                             <div class="rating">
@@ -592,7 +592,7 @@
                     </div>
 
                     <div class="card pcard gloves">
-                        <img src="/assets/images/gloves4.webp" alt="">
+                        <img src="assets/images/gloves4.webp" alt="">
                         <div class="content">
                             <h4>Gloves</h4>
                             <div class="rating">
@@ -621,7 +621,7 @@
                 <h1 class="title text-center">Why Choose KRYO?</h1>
                 <div class="cards">
                     <div class="card">
-                        <img src="/assets/images/bike10.jpg" alt="">
+                        <img src="assets/images/bike10.jpg" alt="">
                         <div class="content">
                             <h1>Light weight</h1>
                             <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
@@ -630,7 +630,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="/assets/images/bike11.jpg" alt="">
+                        <img src="assets/images/bike11.jpg" alt="">
                         <div class="content">
                             <h1>Lifetime Warrenty</h1>
                             <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
@@ -639,7 +639,7 @@
                     </div>
 
                     <div class="card small">
-                        <img src="/assets/images/bike12.jpg" alt="">
+                        <img srcassets/images/bike12.jpg" alt="">
                         <div class="content small">
                             <h1>Biggest Service Network</h1>
                             
@@ -647,7 +647,7 @@
                     </div>
 
                     <div class="card small">
-                        <img src="/assets/images/bike16.jpg" alt="">
+                        <img srcassets/images/bike16.jpg" alt="">
                         <div class="content small">
                             <h1>99% Assembled Delivery</h1>
 
@@ -655,7 +655,7 @@
                     </div>
 
                     <div class="card small">
-                        <img src="/assets/images/bike14.jpg" alt="">
+                        <img srcassets/images/bike14.jpg" alt="">
                         <div class="content small">
                             <h1>Free First Bike Service</h1>
                         </div>
@@ -671,7 +671,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <div class="cards">
                     <div class="card">
-                        <img src="/assets/images/bike15.jpg" alt="">
+                        <img src=assets/images/bike15.jpg" alt="">
                         <div class="content">
                             <h4>Blog Title - Something</h4>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat est voluptatum tempora
@@ -680,7 +680,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="/assets/images/bike16.jpg" alt="">
+                        <img src=assets/images/bike16.jpg" alt="">
                         <div class="content">
                             <h4>Blog Title - Something</h4>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat est voluptatum tempora
@@ -689,7 +689,7 @@
                     </div>
 
                     <div class="card">
-                        <img src="/assets/images/bike2.avif" alt="">
+                        <img src=assets/images/bike2.avif" alt="">
                         <div class="content">
                             <h4>Blog Title - Something</h4>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat est voluptatum tempora
@@ -759,10 +759,10 @@
                         necessitatibus amet odio saepe fugit dolorum praesentium quae ipsa? Pariatur placeat esse quo
                         quisquam eos, recusandae eaque?</p>
                     <li>
-                        <img src="/assets/images/master-card.png" alt="">
-                        <img src="/assets/images/kbz.png" alt="">
-                        <img src="/assets/images/visa.png" alt="">
-                        <img src="/assets/images/cb pay.jpg" alt="">
+                        <img src="assets/images/master-card.png" alt="">
+                        <img src="assets/images/kbz.png" alt="">
+                        <img src="assets/images/visa.png" alt="">
+                        <img src="assets/images/cb pay.jpg" alt="">
 
                     </li>
                 </ul>
