--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                     </div>
 
                     <div class="card small">
-                        <img srcassets/images/bike12.jpg" alt="">
+                        <img src = "assets/images/bike12.jpg" alt="">
                         <div class="content small">
                             <h1>Biggest Service Network</h1>
                             
@@ -647,7 +647,7 @@
                     </div>
 
                     <div class="card small">
-                        <img srcassets/images/bike16.jpg" alt="">
+                        <img src = "assets/images/bike16.jpg" alt="">
                         <div class="content small">
                             <h1>99% Assembled Delivery</h1>
 
@@ -655,7 +655,7 @@
                     </div>
 
                     <div class="card small">
-                        <img srcassets/images/bike14.jpg" alt="">
+                        <img src = "assets/images/bike14.jpg" alt="">
                         <div class="content small">
                             <h1>Free First Bike Service</h1>
                         </div>
@@ -671,7 +671,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <div class="cards">
                     <div class="card">
-                        <img src=assets/images/bike15.jpg" alt="">
+                        <img src="assets/images/bike15.jpg" alt="">
                         <div class="content">
                             <h4>Blog Title - Something</h4>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat est voluptatum tempora
@@ -680,7 +680,7 @@
                     </div>
 
                     <div class="card">
-                        <img src=assets/images/bike16.jpg" alt="">
+                        <img src="assets/images/bike16.jpg" alt="">
                         <div class="content">
                             <h4>Blog Title - Something</h4>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat est voluptatum tempora
@@ -689,7 +689,7 @@
                     </div>
 
                     <div class="card">
-                        <img src=assets/images/bike2.avif" alt="">
+                        <img src="assets/images/bike2.avif" alt="">
                         <div class="content">
                             <h4>Blog Title - Something</h4>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat est voluptatum tempora
