--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Mountain Bike Project</title>
     <link rel="stylesheet" href="assets/css/app.css">
     <link rel="stylesheet" href="assets/css/media_query.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
@@ -66,7 +65,7 @@
         <section id="slider">
             <div class="container">
                 <img src="assets/images/home bicycle.avif" id="slider1" class="slider active">
-                <img src="assets/images/new bike2.avif" id="slider2" class="slider">
+                <img src="assets/images/bike18.avif" id="slider2"class="slider">
                 <img src="assets/images/new bike4.avif" id="slider3" class="slider">
 
                 <div class="controls">
@@ -625,7 +624,7 @@
                         <div class="content">
                             <h1>Light weight</h1>
                             <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-                                voluptates animi labore architecto assumenda fuga?</p>
+                                voluptates animi</p>
                         </div>
                     </div>
 
@@ -634,13 +633,13 @@
                         <div class="content">
                             <h1>Lifetime Warrenty</h1>
                             <p class="left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
-                                voluptates animi labore architecto assumenda fuga?</p>
+                                voluptates animi</p>
                         </div>
                     </div>
 
                     <div class="card small">
                         <img src = "assets/images/bike12.jpg" alt="">
-                        <div class="content small">
+                        <div class="content2 small">
                             <h1>Biggest Service Network</h1>
                             
                         </div>
@@ -648,7 +647,7 @@
 
                     <div class="card small">
                         <img src = "assets/images/bike16.jpg" alt="">
-                        <div class="content small">
+                        <div class="content2 small">
                             <h1>99% Assembled Delivery</h1>
 
                         </div>
@@ -656,7 +655,7 @@
 
                     <div class="card small">
                         <img src = "assets/images/bike14.jpg" alt="">
-                        <div class="content small">
+                        <div class="content2 small">
                             <h1>Free First Bike Service</h1>
                         </div>
                     </div>
